# Verificar-conexao

./: .gitignore  LICENSE  README.md  hello.py  historico_ping.json  ip.txt  log.py  logo_alefe.py  main.py  main_teste_v1.py  notificação.py  pyproject.toml  setup.py  teste.py
logs/: ping_log_20241109_104120.txt  ping_log_20241109_104210.txt  ping_log_20241109_105214.txt  ping_log_20241109_105231.txt  ping_log_20241109_105306.txt  ping_log_20241109_112619.txt
