[project]
name = "verificar-conexao"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cx-freeze>=7.2.4",
    "plyer>=2.1.0",
    "psutil>=6.1.0",
    "pyinstaller>=6.11.0",
    "requests>=2.32.3",
    "twilio>=9.3.6",
]
